# llm-loader

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: ocr_example.py  rag_example.py
examples/data/: pymupdf_output.json  test_chunks.json  test_ocr_doc_chunks.json
llm_loader/: __init__.py  document_loader.py  install_dependencies.py  llm.py  prompts.py  rag_processor.py  schema.py  text_chunker.py  utils.py
llm_loader/script/: install_dependencies.py
smart_llm_loader/: __init__.py  document_loader.py  llm.py  schema.py  utils.py
tests/: conftest.py  test_document_loader.py  test_image_processor.py  test_llm_processing.py
