[tool.poetry]
name = "llmloader"
version = "0.1.0"
description = "A flexible RAG (Retrieval-Augmented Generation) package supporting multiple LLMs and document types"
authors = ["drmingler <davidemmanuel75@gmail.com>"]
readme = "README.md"
packages = [{include = "llm_loader"}]

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-core = "^0.1.10"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
pypdf = "^3.17.1"
tiktoken = "^0.5.2"
faiss-cpu = "^1.7.4"
numpy = "^1.26.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
